# Autoresearch

./: .gitignore  AGENTS.md  Dockerfile  Dockerfile.codex  README.md  docker-compose.yml  prd.md  progress.md  pyproject.toml
.devcontainer/: devcontainer.json  sync_codex_from_host.py  sync_codex_to_host.py
docs/: chinese_output_policy.md  openclaw_integration.md  project_status.md  regression_checklist.md
openclaw/skills/autoresearch/: SKILL.md
src/litagent/: __init__.py  audit.py  classifier.py  cli.py  dedup.py  downloader.py  evidence.py  evidence_quality.py  inspect.py  io.py  job_queue.py  knowledge.py  library_db.py  mcp_server.py  mcp_tools.py  mineru.py  paper_roles.py  pipeline.py  planner.py  provider_diagnostics.py  providers.py  reader.py  report.py  result_summary.py  review_selection.py  schema.py  search.py  secrets.py  status.py  topic_run.py  wiki_export.py  workspace.py
tests/: test_audit_inspect.py  test_dedup_classifier.py  test_e2e_mock_pipeline.py  test_evidence_reader.py  test_job_queue.py  test_library_db.py  test_mcp_tools.py  test_mineru_parser.py  test_openclaw_skill.py  test_provider_mapping.py  test_reader_pdf.py  test_research_plan_schema.py  test_result_summary.py  test_review_selection_report.py  test_search_runs_ranking.py  test_secrets.py  test_topic_run.py  test_wiki_export.py  test_workspace_init.py
